--- a/packages/designer/src/components/system-navigation/index.less
+++ b/packages/designer/src/components/system-navigation/index.less
@@ -10,6 +10,18 @@
   font-size: 16px;
   align-items: center;
   justify-content: space-between;
+  position: relative;
+
+  .left {
+    display: flex;
+    align-items: center;
+  }
+
+  .title {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+  }
 }
 
 .statusBar {
