--- a/packages/designer/src/system-page/style.edit.less
+++ b/packages/designer/src/system-page/style.edit.less
@@ -25,7 +25,8 @@
     flex-direction: column;
 
     > div {
-      flex: 1;
+      //flex: 1;
+      overflow-y:auto !important;
     }
 
     .placeholder {
