--- a/packages/designer/src/system-page/style.edit.less
+++ b/packages/designer/src/system-page/style.edit.less
@@ -1,7 +1,8 @@
 .page {
   width: 375px;
+  height:100%;
   // height: 667px;
-  min-height: 667px;
+  //min-height: 667px;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -23,10 +24,12 @@
     flex: 1;
     display: flex;
     flex-direction: column;
+    overflow-y: auto;
 
     > div {
       //flex: 1;
       overflow-y:auto !important;
+      overflow-x: hidden;
     }
 
     .placeholder {
