--- a/packages/designer/src/components/symbol-glyph/index.less
+++ b/packages/designer/src/components/symbol-glyph/index.less
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'HMSymbol';
-  src: url('https://p4-ec.ecukwai.com/kos/nlav11092/test/HMSymbol.ttf') format('truetype');
+  src: url('https://f2.eckwai.com/kos/nlav11092/test/HMSymbol.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
