feat: icon & page

--- a/packages/designer/src/components/system-navigation/index.less
+++ b/packages/designer/src/components/system-navigation/index.less
@@ -45,14 +45,14 @@
     display: flex;
     align-items: center;
     column-gap: 8px;
-    color: #555;
+    // color: #555;
   }
 
   svg {
     max-width: 22px;
 
     path {
-      fill: #555;
+      fill: currentColor;
     }
   }
 
