--- a/packages/designer/src/icon/editors/icon-selector/index.less
+++ b/packages/designer/src/icon/editors/icon-selector/index.less
@@ -6,9 +6,9 @@
     border: none;
     height: 24px;
     line-height: 24px;
-    border-radius: 3px;
-    background-color: #ffffff;
-    box-shadow: 0 1px 3px -1px #777;
+    background-color: #f5f5f5;
+    border-radius: 6px;
+    border: none;
     cursor: pointer;
     &-editIcon {
       margin-right: 8px;
