--- a/packages/designer/src/button/style.less
+++ b/packages/designer/src/button/style.less
@@ -15,6 +15,8 @@
   border-width: 0px;
   border-style: solid;
   font-size: 14px;
+  -webkit-text-fill-color: #ffffff;
+  -webkit-text-fill-color: #ffffff;
 
   &::after {
     display: none;
@@ -29,6 +31,11 @@
     display: block;
     width: 16px;
     height: 16px;
-    
   }
+
+}
+
+.button:active {
+  background-color: #fa6400 !important;
+  opacity: 0.8;
 }
