--- a/packages/designer/src/button/style.less
+++ b/packages/designer/src/button/style.less
@@ -22,8 +22,7 @@
 
   &.button:active {
     filter: brightness(105%); 
-    background-color: #fa6400;
-    color: #ffffff;
+    // color: #ffffff;
   }
 
   .text {
