--- a/packages/designer/src/text/style.less
+++ b/packages/designer/src/text/style.less
@@ -6,7 +6,7 @@
   line-height: 16px;
   color: #333333;
   position: relative;
-  overflow: visible;
+  // overflow: visible;
 }
 
 .ellipsis-line {
