--- a/packages/designer/src/swiper/style.less
+++ b/packages/designer/src/swiper/style.less
@@ -1,5 +1,9 @@
 .swiper {
   overflow: hidden;
+
+  width: 100%;
+  height: 100%;
+
   .thumbnail {
     display: block;
     width: 100%;
@@ -16,5 +20,17 @@
         object-fit: cover;
       }
     }
+  }
+}
+
+
+.swiperItem {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0px;
+  flex-shrink: 0;
+  &.active {
+    // left: 0;
   }
 }
