--- a/packages/designer/src/swiper/style.less
+++ b/packages/designer/src/swiper/style.less
@@ -27,7 +27,7 @@
 .swiperItem {
   width: 100%;
   height: 100%;
-  position: absolute;
+  position: absolute !important;
   top: 0px;
   flex-shrink: 0;
   &.active {
