--- a/packages/designer/src/form-container/style.less
+++ b/packages/designer/src/form-container/style.less
@@ -7,6 +7,10 @@
   }
 
   :global {
+    .taroify-cell-group {
+      overflow: hidden;
+    }
+
     .taroify-cell__title {
       max-width: unset;
     }
@@ -20,6 +24,10 @@
       width: 24px;
       height: 24px;
     }
+
+    // .mybricks-field.taroify-form-item {
+    //   background-color: transparent;
+    // }
 
     // 强制展示border
     .mybricks-field.border-bottom {
