--- a/packages/designer/src/form-textarea/style.less
+++ b/packages/designer/src/form-textarea/style.less
@@ -5,6 +5,7 @@
   .taroify-textarea__wrapper {
     display: flex;
     flex-direction: column;
+    height: 100%;
 
     .taroify-textarea {
       min-height: 48px;
