feat: adjust size

--- a/packages/designer/src/system-page/style.edit.less
+++ b/packages/designer/src/system-page/style.edit.less
@@ -1,6 +1,6 @@
 .page {
-  width: 375px;
-  height:100%;
+  width: 100%;
+  height: 100%;
   // height: 667px;
   //min-height: 667px;
   position: relative;
