--- a/packages/designer/src/system-webview/style.less
+++ b/packages/designer/src/system-webview/style.less
@@ -4,7 +4,7 @@
   position: relative;
 
   &.edit {
-    width: 375px;
+    width: 100%;
     height: (667 - 84) * 1px;
     transform: scale(1);
   }
