feat:增加样式编辑器、样式调整/对齐

--- a/packages/designer/src/sidebar/style.less
+++ b/packages/designer/src/sidebar/style.less
@@ -9,7 +9,7 @@
 
   :global {
     .taroify-tree-select__sidebar {
-      max-width: 120px;
+      // max-width: 120px;
       min-width: 100px;
       flex: none;
 
@@ -24,10 +24,13 @@
         flex-wrap: wrap;
       }
     }
+    .taroify-tree-select__content {
+      background-color: transparent;
+    }
   }
 }
 
-.itemTabName{
+.itemTabName {
   color: rgb(62, 62, 62);
   font-weight: 700;
   font-size: 13px;
