--- a/packages/designer/src/components/swiper/index.less
+++ b/packages/designer/src/components/swiper/index.less
@@ -17,7 +17,7 @@
       .indicator {
         width: 6px;
         height: 6px;
-        border-radius: 50%;
+        border-radius: 9999px;
 
         margin: 0 3px;
 
