feat:增加样式编辑器、样式调整/对齐

--- a/packages/designer/src/form-container/style.less
+++ b/packages/designer/src/form-container/style.less
@@ -3,15 +3,18 @@
   width: 100%;
   // height: 100%;
 
-  .content {
+  .group {
+    background: #fff;
   }
 
   :global {
     .taroify-cell-group {
       overflow: hidden;
+      background: transparent;
     }
 
     .taroify-cell__title {
+      display: block;
       max-width: unset;
     }
 
