--- a/packages/designer/src/popover/index.less
+++ b/packages/designer/src/popover/index.less
@@ -1,21 +1,20 @@
 .outer {
+  position: relative;
+  width: 100%;
+  height: 100%;
+
+  .popover {
     width: 100%;
     height: 100%;
+    overflow: hidden;
+    pointer-events: auto;
+  }
 
-    .popover {
-        width: 100%;
-        height: 100%;
-        overflow: hidden;
-        pointer-events: auto;
-    }
-
-    .carrier {
-        width: 100%;
-        height: 100%;
-    }
+  .carrier {
+    position: absolute;
+  }
 }
 
-
 :global(.mybricks_slot) {
-    overflow: unset !important;
+  overflow: unset !important;
 }
