--- a/packages/designer/src/form-datetime/style.less
+++ b/packages/designer/src/form-datetime/style.less
@@ -2,7 +2,7 @@
   width: 100%;
 }
 
-.slot_default_style{
+.slot_default_style {
   width: 100%;
   height: 100%;
 }
@@ -13,8 +13,11 @@
   width: 100%;
 
   :global {
-    .taroify-input--readonly {
-      color: var(--input-color, var(--text-color, var(--gray-8, #323233)))
+    .taroify-native-input {
+      color: #000;
+    }
+    .taroify-native-input::placeholder {
+      color: #c8c9cc;
     }
   }
 }
