--- a/packages/designer/src/components/system-navigation/index.less
+++ b/packages/designer/src/components/system-navigation/index.less
@@ -27,10 +27,11 @@
 .statusBar {
   height: 30px;
   width: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  // display: flex;
+  // justify-content: space-between;
+  // align-items: center;
   padding: 0px 12px;
+  background-color: gray;
   //opacity: .5;
 
   &.fixed {
@@ -46,6 +47,22 @@
     align-items: center;
     column-gap: 8px;
     // color: #555;
+  }
+
+  .left_triple_screen {
+    position: fixed;
+    left: 12px;
+    z-index: 999999;
+    display: flex;
+    align-items: center;
+    column-gap: 8px;
+    top: 5px;
+  }
+
+  .battery {
+    position: fixed;
+    right: 12px;
+    top: 5px;
   }
 
   svg {
