--- a/packages/designer/src/components/system-tabbar/index.less
+++ b/packages/designer/src/components/system-tabbar/index.less
@@ -1,11 +1,10 @@
 .tabBar {
-  width: 375px;
+  width: 100%;
   background: transparent;
   box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.1);
   z-index: 9999;
 
   .items {
-    width: 375px;
     height: 54px;
     display: flex;
   }
