feat:增加样式编辑器、样式调整/对齐

--- a/packages/designer/src/form-checkbox/style.less
+++ b/packages/designer/src/form-checkbox/style.less
@@ -12,7 +12,11 @@
   }
 
   :global(.mybricks-active .taroify-icon) {
-    background-color: #FA6400;
-    border: #FA6400 1px solid;
+    background-color: #fa6400;
+    border: #fa6400 1px solid;
+  }
+
+  :global(.taroify-checkbox--vertical.taroify-checkbox) {
+    display: flex;
   }
 }
