--- a/packages/designer/src/search-bar/style.less
+++ b/packages/designer/src/search-bar/style.less
@@ -1,45 +1,57 @@
-.searchBox {
+.searchWrap {
   width: 100%;
   height: 100%;
   display: flex;
   align-items: center;
-  position: relative;
-  background-color: #f7f8fa;
-  padding: 3px 12px;
-  padding-right: 3px;
-  border-radius: 2px;
-
-  .icon {
-    margin-right: 3px;
+  .searchLabel {
+    width: 10%;
+    flex-shrink: 0;
+    font-size: 13px;
+    color: #333333;
   }
-
-  .searchBoxDisabled {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    z-index: 1;
-    background-color: transparent;
-    color: transparent;
-  }
-
-  .searchBar {
-    height: 100%;
-    padding: 0;
-    overflow: hidden;
-    flex: 1;
-  }
-
-  .searchButton {
+  .searchBox {
+    flex-grow: 1;
     display: flex;
-    align-items: center;
-    justify-content: center;
-    background: #fa6400;
-    color: #ffffff;
-    font-size: 14px;
-    width: 50px;
     height: 100%;
+    align-items: center;
+    position: relative;
+    background-color: #f7f8fa;
+    padding: 3px 12px;
+    padding-right: 3px;
     border-radius: 2px;
-    border: none;
-    outline: none;
+
+    .icon {
+      margin-right: 3px;
+    }
+
+    .searchBoxDisabled {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      z-index: 1;
+      background-color: transparent;
+      color: transparent;
+    }
+
+    .searchBar {
+      height: 100%;
+      padding: 0;
+      overflow: hidden;
+      flex: 1;
+    }
+
+    .searchButton {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background: #fa6400;
+      color: #ffffff;
+      font-size: 14px;
+      width: 50px;
+      height: 100%;
+      border-radius: 2px;
+      border: none;
+      outline: none;
+    }
   }
 }
