feat:增加样式编辑器、样式调整/对齐

--- a/packages/designer/src/cell/style.less
+++ b/packages/designer/src/cell/style.less
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   padding: 12px 16px;
-  border-bottom: 1px solid #f8f8f8;
+  // border-bottom: 1px solid #f8f8f8;
   height: 100%;
   background: #ffffff;
   position: relative;
@@ -79,4 +79,22 @@
     font-weight: 500;
     font-size: 16px;
   }
+}
+
+.swipeLeft {
+  display: none;
+  width: 50px;
+  height: 100%;
+  background-color: #dd241f;
+  color: #fff;
+  font-size: 14px;
+}
+
+.swipeLeftSecondary {
+  display: none;
+  width: 50px;
+  height: 100%;
+  background-color: #d9d9d9;
+  color: #333;
+  font-size: 14px;
 }
