--- a/packages/designer/src/form-image-uploader/style.less
+++ b/packages/designer/src/form-image-uploader/style.less
@@ -29,7 +29,7 @@
     // width: 20px;
     // height: 20px;
     color: #cccccc;
-    transform:translateY(-2px) !important;
+    transform: translateY(-2px) !important;
 
     svg {
       color: #cccccc;
@@ -82,7 +82,7 @@
     min-width: 18px;
     min-height: 18px;
     cursor: pointer;
-    background: #cccccc;
+    background: rgba(0, 0, 0, 0.3);
     border-bottom-left-radius: 9999px;
 
     &::after {
