--- a/packages/designer/src/sms-code/style.less
+++ b/packages/designer/src/sms-code/style.less
@@ -1,6 +1,5 @@
 .input {
   :global {
-
     // H5的垫片，不能让他有样式
     .taroify-native-input {
       // H5兼容，给input配置字体大小，不然不会编译成vw
@@ -8,7 +7,6 @@
       border: none;
       background: transparent;
     }
-
   }
 }
 
@@ -17,7 +15,6 @@
     height: 100%;
     color: transparent;
     opacity: 0;
-
   }
 }
 
@@ -30,7 +27,6 @@
     position: relative;
     user-select: none;
     width: 100%;
-    height: 50px;
 
     .security {
       display: flex;
@@ -79,7 +75,7 @@
         transform: translate(-50%, -50%);
       }
     }
-    .input_item_error{
+    .input_item_error {
       border: red solid 1px !important;
     }
 
@@ -100,30 +96,26 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      .line{
+      .line {
         width: 70%;
         height: 2px;
-        background-color: #334D6E;
+        background-color: #334d6e;
         border-radius: 50px;
       }
     }
-
   }
 
   .desc {
-    color: rgb(104, 104, 104);
-    height: 42px;
-    line-height: 42px;
     width: 100%;
-    font-size: 14px;
+    margin-top: 10px;
     display: flex;
     justify-content: space-between;
-
-    .error{
-      color:red
+    .descText,
+    .tips {
+      color: #4b4b4b;
+      font-size: 14px;
     }
   }
-
 }
 
 @keyframes cursor-flicker {
