feat: 按钮增加图标

--- a/packages/designer/src/button/style.less
+++ b/packages/designer/src/button/style.less
@@ -4,6 +4,7 @@
   line-height: unset;
   display: flex;
   align-items: center;
+  justify-content: center;
   text-align: center;
   background-color: #fa6400;
   color: #ffffff;
@@ -17,13 +18,14 @@
   }
 
   &.button:active {
-    filter: brightness(95%); 
+    filter: brightness(95%);
     background-color: #fa6400;
     color: #ffffff;
   }
 
-  .text {
-    flex: 1;
+  .imageIcon {
+    width: 14px;
+    height: 14px;
   }
 }
 
